welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:8: error: not found: value y
	{	setPos(y,y)
                       ^Diagonal:10: error: not found: value y
		y=y+1
                ^Diagonal:13: error: not found: value y
setPos(y,y)
       ^